feat: classify pokemon into legendary-type

--- a/pokemon-generations.ipynb
+++ b/pokemon-generations.ipynb
@@ -16,7 +16,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lets give each column a name, including `npn (National Pokedex Number)`"
+    "Lets give each column a name, including `npn-(National Pokedex Number)`"
    ]
   },
   {
@@ -29,7 +29,7 @@
    "source": [
     "cols= ['npn','name','t1','t2','total','hp','attack','defense','sp_atk','sp_def','speed']\n",
     "data= pd.read_csv(\"Pokemon.csv\", names= cols, skiprows=[0]) \n",
-    "#the original name uses # for npn! Never use symbols as column names!"
+    "#the original name uses \"#\" for npn! Never use symbols as column names!"
    ]
   },
   {
@@ -70,6 +70,158 @@
     "        return 0\n",
     "data['gen']= map(generation,data.npn)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1    0.20750\n",
+       "5    0.20625\n",
+       "3    0.20000\n",
+       "4    0.15125\n",
+       "2    0.13250\n",
+       "6    0.10250\n",
+       "Name: gen, dtype: float64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.gen.value_counts(normalize=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name = MewtwoMega Mewtwo X\n",
+      "Total stats 780\n",
+      "Mean of total of generation 1 is = 76.6385542169\n",
+      "Name = HeracrossMega Heracross\n",
+      "Total stats 600\n",
+      "Mean of total of generation 2 is = 72.0283018868\n",
+      "Name = GroudonPrimal Groudon\n",
+      "Total stats 770\n",
+      "Mean of total of generation 3 is = 81.625\n",
+      "Name = GarchompMega Garchomp\n",
+      "Total stats 700\n",
+      "Mean of total of generation 4 is = 82.867768595\n",
+      "Name = KyuremBlack Kyurem\n",
+      "Total stats 700\n",
+      "Mean of total of generation 5 is = 82.0666666667\n",
+      "Name = DiancieMega Diancie\n",
+      "Total stats 700\n",
+      "Mean of total of generation 6 is = 75.8048780488\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,7):\n",
+    "    print \"Name =\",data.iloc[data[data['gen']==i].attack.idxmax(axis=1)][\"name\"]\n",
+    "    print \"Total stats\", data.iloc[data[data['gen']==i].attack.idxmax(axis=1)][\"total\"]\n",
+    "    print \"Mean of total of generation\" ,i, \"is =\",data[data['gen']==i][\"attack\"].mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lets see if the legendary pokemon have different stats than others-\n",
+    "According to [Bulbapedia Legendary article](http://bulbapedia.bulbagarden.net/wiki/Legendary_Pok%C3%A9mon) -\n",
+    "> Of the 760 Pokémon species, 38 are Legendary Pokémon (5%). Each released generation has introduced at least three Legendary Pokémon\n",
+    "![legendary stats](https://raw.githubusercontent.com/chirag-jhamb/pokemon-analysis/master/img/legendary-stats.png)\n",
+    "\n",
+    "Now lets see the average stats of the pokemon-"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "D=(data.describe().iloc[1,2:8])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAW0AAAEeCAYAAABBt0RNAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAGUhJREFUeJzt3X2UZHV95/H3BwYR5MHJCcyoxBnwyMjhLPI0xqfsFgFi\nXHediTFjzMQDEvccoxs8cROdcVW6Y1bFDesmuxtdDGKvGYyQDRl8BMlQsElkGXkWcdwTZQB1GgkE\nRaKAfvaPe3umqanpru6qmlu/6s/rnDpT99f3dn1/XcWHX/3uk2wTERFlOKDpAiIioncJ7YiIgiS0\nIyIKktCOiChIQjsioiAJ7YiIgvQU2pJ+V9JXJd0haYukp0laLukaSTskXS3pyGEXGxGx1M0b2pKe\nDfwOcKrtk4BlwOuBTcC1ttcA24DNwyw0IiJ6nx45EHiGpGXAIcC3gXXAVP3zKWD94MuLiIjZ5g1t\n298BLgLupQrrR2xfC6ywPV2vsws4epiFRkREb9Mjz6QaVa8Cnk014t4IdJ7/nvPhIyKGbFkP65wF\nfNP2QwCSrgReCkxLWmF7WtJK4IFuG7fbbbfb7d3LrVaLVqvVb919abfbjdcwSOnP6Bu3PqU/w6lh\ndlZOTk6eYbvduV4voX0v8GJJTwd+DJwJbAceBc4FLgTOAbZ223gUQrrTKLxBg5T+jL5x61P6M3id\nWTkxMdHutt68oW37Jkl/CdwKPFH/ezFwOHC5pPOAncCGvqseU6t/biU7758e6mtMTk4O5feuOmYF\n99y3ayi/OyIWrpeRNrYngc5UeIhq6iTmsfP+abxleL9/4n/DxK8O53dr43D/ZxMRC7Mkz4hs+mvQ\noLVOaLqCwRq39wfGr0/pT3O0H26CsOSPKpE01JH2MGkj5EYZEY1Qt8YlOdKOiChVQjsioiAJ7YiI\ngiS0IyIKktCOiChIQjsioiAJ7YiIgiS0IyIKktCOiChIQjsioiAJ7YiIgiS0Y1FWr16JpCIfq1ev\nbPrPF7FoPV2aNaLTzp3TlHodKSmXm41yZaQdEVGQhHYEsHLl6sanbRb7WLlyddN/vtiPMj0SAUxP\n76TUS79PT3e97HKMqYy0I8bQymPK3VG88pjsKJ7LvCNtSccDn6Yahgg4DngP8Mm6fRVwD7DB9iND\nqzQiejb97WmYaLqKxZmeyI7iucw70rb9Ddun2D4VOA34IXAlsAm41vYaYBuweaiVRkTEgqdHzgL+\nwfZ9wDpgqm6fAtYPsrCIiNjbQkP7dcBl9fMVtqcBbO8Cjh5kYRERsbeeQ1vSQcCrgSvqps5d7WXu\neo+IKMhCDvl7JXCz7Qfr5WlJK2xPS1oJPNBto3a7Tbvd3r3carVotVqLLDciYjx1ZuXk5GTLdrtz\nPbnHc5ElfQr4ou2pevlC4CHbF0p6J7Dc9qYumy75EbgkvKXpKhZHG6HbZ0RSwaex790nSZT7UVX3\n/kw0U03fJrp/5pagrgfg9zQ9IulQqp2QfzWr+ULgbEk7gDOBD/Zb4YzVK8s9xnT1yhxjGhHD09P0\niO3HgKM62h6iCvKB2zk9Xe6YZzrHmEbE8OSMyIgowurnrmr8m/Siv4E/d9XA/g659khEFGHnfffi\n9vamy1gUtdYO7HdlpB0RUZCEdkREQRLaEREFSWhHRBQkoR0RUZCEdkREQRLaEREFSWhHRBQkoR0R\nUZCEdkREQRLaEREFSWhHRBQkoR0RUZCEdkREQRLaEREFSWhHRBQkoR0RUZBeb+x7pKQrJN0t6S5J\nPy9puaRrJO2QdLWkI4ddbETEUtfrSPuPgc/bPgF4IfB1YBNwre01wDZg83BKjIiIGfOGtqQjgF+w\nfSmA7SdtPwKsA6bq1aaA9UOrMiIigN5G2scCD0q6VNItki6WdCiwwvY0gO1dwNHDLDQiInq7G/sy\n4FTgrba/IunDVFMj7livcxmAdrtNu93evdxqtWi1WosqNiJiXHVm5eTkZMt2u3M92V2zds8K0grg\ny7aPq5dfThXazwNatqclrQSuq+e8O839At1fc+EbjQgBnX9TSXhLM/X0Sxv37g/UfSr0TZK6v0eL\n+KiOCHXvz0Qz1fRtYo7PXHv7/q9nANRa27VP823WrXHe6ZF6CuQ+ScfXTWcCdwFXAefWbecAWxda\nUURELEwv0yMA5wNbJB0EfBN4I3AgcLmk84CdwIbhlBgRETN6Cm3btwNru/zorMGWExERc8kZkRER\nBUloR0QUJKEdEVGQhHZEREES2hERBUloR0QUJKEdEVGQhHZEREES2hERBUloR0QUJKEdEVGQhHZE\nREES2hERBUloR0QUJKEdEVGQhHZEREES2hERBUloR0QUJKEdEVGQnu4RKeke4BHgp8ATtl8kaTnw\naWAVcA+wwfYjQ6ozIiLofaT9U6Bl+xTbL6rbNgHX2l4DbAM2D6PAiIjYo9fQVpd11wFT9fMpYP2g\nioqIiO56DW0DX5K0XdKb6rYVtqcBbO8Cjh5GgRERsUdPc9rAy2x/V9JRwDWSdlAF+WydywC0223a\n7fbu5VarRavVWkSpERHjqzMrJycnW7bbnevJ7pq1+yTpAuBR4E1U89zTklYC19k+ocsmC3uB6jUW\nvtGIEND5N5WEtzRTT7+0ce/+QN2nQt8kqft7tIiP6ohQ9/5MNFNN3ybm+My1t+//egZArbVd+zTf\nZt0a550ekXSopMPq588Afgm4E7gKOLde7Rxg60IrioiIhellemQFcKUk1+tvsX2NpK8Al0s6D9gJ\nbBhinRERQQ+hbftbwMld2h8CzhpGURER0V3OiIyIKEhCOyKiIAntiIiCJLQjIgqS0I6IKEhCOyKi\nIAntiIiCJLQjIgqS0I6IKEhCOyKiIAntiIiCJLQjIgqS0I6IKEhCOyKiIAntiIiCJLQjIgqS0I6I\nKEhCOyKiIAntiIiC9Bzakg6QdIukq+rl5ZKukbRD0tWSjhxemRERAQsbab8N+Nqs5U3AtbbXANuA\nzYMsLCIi9tZTaEs6BvjXwJ/Nal4HTNXPp4D1gy0tIiI69TrS/jDw+4Bnta2wPQ1gexdw9IBri4iI\nDsvmW0HSq4Bp27dJas2xqrs1tttt2u327uVWq0WrNdeviYhYejqzcnJysmW73bme7K5Zu2cF6f3A\nbwJPAocAhwNXAqcDLdvTklYC19k+ocuvmPsFur/mwjcaEQI6/6aS8JZm6umXNu7dH6j7VOibJHV/\njxbxUR0R6t6fiWaq6dvEHJ+59vb9X88AqLW2a5/m26xb47zTI7bfZfu5to8Dfh3YZvsNwGeAc+vV\nzgG2LrSiiIhYmH6O0/4gcLakHcCZ9XJERAzRvHPas9m+Hri+fv4QcNYwioqIiO5yRmREREES2hER\nBUloR0QUJKEdEVGQhHZEREES2hERBUloR0QUJKEdEVGQhHZEREES2hERBUloR0QUJKEdEVGQhHZE\nREES2hERBUloR0QUJKEdEVGQhHZEREES2hERBUloR0QUZN7QlnSwpP8r6VZJd0q6oG5fLukaSTsk\nXS3pyOGXGxGxtM0b2rZ/DJxh+xTgZOCVkl4EbAKutb0G2AZsHmqlERHR2/SI7cfqpwdT3cHdwDpg\nqm6fAtYPvLqIiHiKnkJb0gGSbgV2AV+yvR1YYXsawPYu4OjhlRkREVCNmudl+6fAKZKOAK6UdCLV\naPspq3Xbtt1u0263dy+3Wi1ardaiio2IGFedWTk5Odmy3e5cT3bXrN0nSe8BHgPeBLRsT0taCVxn\n+4QumyzsBarXWPhGI0JA599UEt7STD390sa9+wN1nwp9k6Tu79EiPqojQt37M9FMNX2bmOMz196+\n/+sZALXWdu3TfJt1a+zl6JGfnTkyRNIhwNnA3cBVwLn1aucAWxdaUURELEwv0yPPAqYkHUAV8p+2\n/XlJNwKXSzoP2AlsGGKdERFBD6Ft+07g1C7tDwFnDaOoiIjoLmdERkQUJKEdEVGQhHZEREES2hER\nBUloR0QUJKEdEVGQhHZEREES2hERBUloR0QUJKEdEVGQhHZEREES2hERBUloR0QUJKEdEVGQhHZE\nREES2hERBUloR0QUJKEdEVGQhHZEREF6uRv7MZK2SbpL0p2Szq/bl0u6RtIOSVfP3LE9IiKGp5eR\n9pPA222fCLwEeKukFwCbgGttrwG2AZuHV2ZEREAPoW17l+3b6uePAncDxwDrgKl6tSlg/bCKjIiI\nyoLmtCWtBk4GbgRW2J6GKtiBowddXEREPNWyXleUdBjwl8DbbD8qyR2rdC4D0G63abfbu5dbrRat\nVmvhlUZEjLHOrJycnGzZbneuJ7tr1j51JWkZ8FngC7b/uG67G2jZnpa0ErjO9gldNp//BfZ+vYVv\nNCIEdP5NJeEtzdTTL23cuz9Q96nQN0nq/h4t4qM6ItS9PxPNVNO3iTk+c+3t+7+eAVBrbdc+zbdZ\nt8Zep0c+DnxtJrBrVwHn1s/PAbYutKKIiFiYeadHJL0M2AjcKelWquHIu4ALgcslnQfsBDYMs9CI\niOghtG3/HXDgPn581mDLiYiIueSMyIiIgiS0IyIKktCOiChIQjsioiAJ7YiIgiS0IyIKktCOiChI\nQjsioiAJ7YiIgiS0IyIKktCOiChIQjsioiAJ7YiIgiS0IyIKktCOiChIQjsioiAJ7YiIgiS0IyIK\nktCOiCjIvKEt6RJJ05LumNW2XNI1knZIulrSkcMtMyIioLeR9qXAKzraNgHX2l4DbAM2D7qwiIjY\n27yhbftvgYc7mtcBU/XzKWD9gOuKiIguFjunfbTtaQDbu4CjB1dSRETsy7IB/R7v6wftdpt2u717\nudVq0Wq1BvSyERHjoTMrJycnW7bbnevJ3mfe7llJWgV8xvZJ9fLdQMv2tKSVwHW2T9jH5vO/wN6v\nt/CNRoSAzr+pJLylmXr6pY179wfqPhX6Jknd36NFfFRHhLr3Z6KZavo2Mcdnrr19/9czAGqt7dqn\n+Tbr1tjr9Ig6fsFVwLn183OArQutJiIiFq6XQ/4uA/4eOF7SvZLeCHwQOFvSDuDMejkiIoZs3jlt\n27+xjx+dNeBaIiJiHjkjMiKiIAntiIiCJLQjIgqS0I6IKEhCOyKiIAntiIiCJLQjIgqS0I6IKEhC\nOyKiIAntiIiCJLQjIgqS0I6IKEhCOyKiIAntiIiCJLQjIgqS0I6IKEhCOyKiIAntiIiC9BXakn5Z\n0tclfUPSOwdVVEREdLfo0JZ0APDfgVcAJwKvl/SCQRU2TO2mCxiw9tearmCw2u2mKxiGdtMFDNa3\nmi5gsNq33tx0CT3rZ6T9IuD/2d5p+wngL4B1gylruNpNFzBg7bubrmCwEtoFuKfpAgarfdvSCO3n\nAPfNWr6/bouIiCHJjsiIiILI9uI2lF4MTNj+5Xp5E2DbF3as1wJas5rattuLetEBkdRquoZBSn9G\n37j1Kf0ZTg30kJX9hPaBwA7gTOC7wE3A622P2QxrRMToWLbYDW3/RNK/B66hmma5JIEdETFcix5p\nR0TE/pcdkRERBUloR0QUZEmFtqQjJB3edB2DIEld2g5uopZBkfRySW+snx8l6dima+rHuLxHkj5Z\n//u2pmuJJRLaktZKuhO4A/iqpNslndZ0XX26ZPaCpMOAzzdUS98kXQC8E9hcNx0E/HlzFQ3EuLxH\np0l6NnCepOWSfmb2o+niFkrSqXM9mq5vPos+eqQwlwBvsf1/oBrRAZcCJzVaVX/ul/Sntt8iaTnw\nOeBjTRfVh18BTgFuAbD9nTH4VjQu79FHgb8BjgNuBmZ/g3DdXpKL6n+fDpwO3E7Vp5OArwAvaaiu\nniyJkTbwk5nABrD9t8CTDdbTN9vvBR6V9FGqwy4vsn1pw2X143FXhzIZQNIzGq6nb+PyHtn+E9sn\nAB+3fZztY2c9SgtsbJ9h+wyq80tOtX267dOoBg3fbra6+S2JQ/4k/VfgEOBTVKHwOuBH1F+/bd/S\nXHULI+k1sxeB91Cd2PRFANt/1URd/ZL0e8DzgbOBDwDnAZfZ/m+NFrYI4/oewe5vqc+3famknwUO\nt13kNf8k3WX7xPnaRs1SCe3r6qcznVX9XFSn3v9iI4UtgqS5Rmq2fd5+K2bAJJ0N/BLV+3K17S81\nXNKijOt7VO93OB1YY/v4ep77Ctsva7i0RZH0KeCH7Nl3shE4zPbrm6tqfksltJ8O/Cqwmj3z+Lb9\nB40VFU9RT4f8qD7Tdg2wBvhCfdnfIkl6me2/m6+tFJJuo97vYPuUuu0O20XuG6pz4beBf1k33QB8\nxPaPmqtqfktlTvuvgX8LPAE8OutRLElTkp45a3m5pI83WVOfbgAOlvQcqmmENwCfaLSi/nWb2ilu\numeWsdrvUIfzR4FNtn/F9odHPbBh6Rw9cszM1QjHyEm2/2lmwfbDkk5psqA+yfZjkn6LarTzoXpk\nVxxJLwFeChwl6e2zfnQEcGAzVQ3E5ZL+J/BMSf+Oar9DiUfDACDp1cB/Bp4GHCvpZOAPbL+62crm\ntlRC++8l/QvbdzZdyAAdIGm57YcB6uNlS34/VYfdRuC36rZSA+5pwGFU78fswxa/D7y2kYoGwPYf\n1fsdvk81ffXeUvc71C6gugNXG8D2bSWc0FXyf+Tzqk+oMVU/3yjpm8CP2bMDssi5uNpFwJclXUHV\nn9cC/6nZkvryNqoTa660fZek44Dr5tlmJNm+Hrhe0ids72y6nkGqQ7rkoJ7tCduPdJy4OvI7+cZ6\nR6SkVXP9vPT/oCSdCJxRL26zPWa3+C2bpKOAd1Dd+PrpM+0lHa0EIOkHzBFmto/Yj+UMjKRLqE4a\n2kR1oML5wEG239xoYfMY65F26aE8n3pE+j3qQJD0XNv3NlzWokg6Hvg9nnqET3EB12EL8Gng3wBv\nBs4BvtdoRYtg+3AASe+jOiHlk1Tf7jYCz2qwtH79DvAfqb59XwZcDfxhoxX1YKxH2uOs3olyEfBs\n4AFgFXD3qJ8YsC+Sbqfak38z8JOZdtvl3Ca7g6SbbZ82+7A4Sdttr226tsWQdLvtF87XVhpJh9p+\nrOk6erVUDvkbR+8DXgx8w/axVLd9u7HZkvrypO2P2L7J9s0zj6aL6tPMMebflfSq+uie4i6wNMsP\nJW2UdKCkAyRtpDo5pUiSXirpa8DX6+UXSvrThsuaV0K7XE/Y/keqo0gOsH0d1dlqpfqMpLdIelbJ\nV5Dr8IeSjgT+A9XUz58Bv9tsSX35DWADMF0/fq1uK9WHgVcA/whg+3b2nGgzssZ6TnvM/VN9qc8b\ngC2SHqDgUQ/VfC/A789qK/EKcrvZ/mz99BH27DDeTdJm2x/Yv1Utnu17gHX7+nlp/QGwfV/H0SM/\n2de6oyIj7XKtAx6jGrl9EfgHqh1eReq4clyxV5BboF9ruoABK60/90l6KWBJB9UXLRv5m5MntMv1\nXts/tf2k7Snbf0J1E4EiSTpU0rslXVwvP19Ssf8T6tFed7YpXGn9eTPwVuA5wHeAk+vlkZbQLtfZ\nXdpeud+rGJxLgcepTv+G6rrGI3/4VZ/G7dCtovpj+0HbG22vsH2U7d+s9xONtIR2YST9dn2m5wsk\n3THr8S2g5NP0n2f7Q9RHXNSHYJU2cluocetfUf2RdJykz0j6nqQHJG2tz8QdadkRWZ7LgC9Q3Shg\n06z2H9h+qJmSBuJxSYew5wpyz6M66WGcXdF0AQNWWn8uA/4H1a3uAH6d6kYpP99YRT3ISLswth+p\n9+I/aXvnrMdDqu+aXagLqHao/pykLVSnF7+j2ZL6M2sk92C3kZzt9zdZ30KNW3+AQ21/st4v9KTt\nP2fW5QZGVUK7XJ23SVoGFHeHeUkzdz25AXgNcC7VaOd02+2GyhqUy4DLgZVUZ65eQdW3Uo1bf74g\naZOk1ZJWSXoH8PlRP0cgp7EXRtJm4F1U97ycfertE8DFtjc3UtgizTrV+xbbpzZdzyB1u6tLyad9\nj2F/Zt/bcvatCKG6CuhIzm8ntAsl6QPAh4Dj2fOVzrZvaK6qhZN0I3AHsB74i86f2z5/vxc1IJIu\nBB6m6tfMDaWXU114n9L2QYxhfzYAX7T9fUnvAU4F3ucRv9F3QrtQ9Z1DzgeOAW6jug7Jl0u7Kp6q\nO3qfBVwIvLfz57an9ntRA1LqSG5fxrA/d9g+SdUd5t8H/BHV+Q8jvSMyoV2o+rC/tcCNtk+W9ALg\n/bZf03BpiyLphfW1H8ZGqSO5fRnD/txq+5T6W+udti+baWu6trlkR2S5fjRzE1JJB9v+OtUtoEr1\nz5L+RtJXASSdJOndTRfVp3fXAfdy4BepLhj1kYZr6se49efbqu55+TqqHZAHU0AmjnyBsU/3q7ob\n+18DX5K0FSj5pg8fo7rd2MzJNXdQHTdbspmLD70K+Jjtz1HdP7JU49afDVQ3PnhFfZPsn+GpFywb\nSZkeGQOS/hVwJNVX18ebrmcxZm4OMPvrqaTbbJ/cdG2LJemzVKfjn001lfDPwE0FH20xVv0pVUba\nY8D29bavKjWwaw/WZ0HOnBH5WqpbW5WsyJHcHMatP0XKSDtGQn1m3cVUF4x6GPgWsHHc7/MZsVAJ\n7WiUpLd3NB1C9Q3whwC2/8t+LypihOWCUdG0w+t/11AdwriV6tjfNwA3NVVUxKjKSDtGgqQbgFfZ\n/kG9fDjwOdsjf8++iP0pOyJjVKygugnCjMfrtoiYJdMjMSr+F3CTpCvr5fXAJ5orJ2I0ZXokRoak\nU4FfqBdvsH1rk/VEjKKEdkREQTKnHRFRkIR2RERBEtoREQVJaEdEFCShHRFRkP8PfxaN1FgN39IA\nAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x7f2273f88250>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
+    "ax=D.plot(kind='bar',width = 0.9,color=['red','orange','yellow','blue','green','pink'])\n",
+    "ax.spines['top'].set_visible(False)\n",
+    "ax.spines['right'].set_visible(False)\n",
+    "ax.spines['bottom'].set_visible(False)\n",
+    "ax.spines['left'].set_visible(False)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Obviously, legendary pokemons have different stats in the data, but since the dataset is too small, lets add a binary column `legendary` rather than removing these. True values would point to higher stats.\n",
+    "Lets use [List of legendary pokemon](http://bulbapedia.bulbagarden.net/wiki/Legendary_Pok%C3%A9mon#List_of_Legendary_Pok.C3.A9mon) to classify."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "leg_npn=[144,145,146,150,243,244,245,249,250,377,378,379,380,381,382,383,384,386,385,480,481,482,483,484,485,486,487,491,492,493,494,638,639,640,641,642,643,644,645,646,716,717,718,719,720,721]\n",
+    "def func_legendary(x):\n",
+    "    if x in leg_npn:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "data['legendary']= map(func_legendary,data.npn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
